# pyblio-1.3

./: AUTHORS  ChangeLog  ChangeLog-1.2  MAINTAINERS  Makefile.am  NEWS  README  ROADMAP  TODO  autogen.sh  configure.ac  pyblio.desktop.in  pyblio.keys.in  pyblio.mime  pybliographer.py  pybliographer.sodipodi  pybliographer.spec  pybliographic.desktop  pybliographic.desktop.in  pybliographic.keys.in  pybrc.py  setup-check.py
Legacy/: Autoload.py  Base.py  Config.py  Fields.py  Formatter.py  Help.py  Iterator.py  Key.py  LyX.py  Makefile.am  Open.py  Query.py  Resource.py  Selection.py  Sort.py  TextUI.py  Types.py  Utils.py  __init__.py  userexit.py  userformat.py  ut_Utils.py  ut_userformat.py  version.py.in
Legacy/ConfDir/: Base.py  BibTeX+.py  BibTeX.py  Gnome.py  GnomeUI.py  Makefile.am  Medline.py  Ovid.py  Refer.py  Resource.py
Legacy/Format/: BibTeX.py  Makefile.am  Medline.py  Ovid.py  OvidLike.py  Refer.py  isifile.py  ut_Isi.py  ut_Ovidlike.py  ut_medline.py
Legacy/GnomeUI/: Citation.py  Common.py  Config.py  Document.py  Editor.py  Entry.py  Fields.py  FieldsInfo.py  FileSelector.py  Format.py  Index.py  Makefile.am  Medline.py  Mime.py  OpenURL.py  Pybliographic.py  Search.py  Sort.py  Utils.py  __init__.py  ut_compat.py
Legacy/GnomeUI/glade/: Makefile.am  config1.glade  config1.gladep  fetch.glade  fetch.gladep  fields1.glade  format.glade  medline.glade  medline.gladep  pyblio.glade.in  pyblio.gladep  search.glade  sort.gladep  wpconnect.glade
Legacy/Output/: LaTeX.py  Makefile.am  html.py  latexutils.py  raw.py  text.py  textau.py  textnum.py
Legacy/Style/: Generic.py  Makefile.am  Parser.py  Utils.py  abbrv.py  apa4e.py
Pyblio/: Autoload.py  Base.py  Config.py  Connector.py  Exceptions.py  Fields.py  Formatter.py  Help.py  Iterator.py  Key.py  LyX.py  Makefile.am  Open.py  Query.py  Resource.py  Search.py  Selection.py  Sort.py  TextUI.py  Types.py  Utils.py  __init__.py  pybtextvar.py  recode.py  userformat.py  ut_Utils.py  ut_userformat.py  version.py.in
Pyblio/ConfDir/: Base.py  BibTeX+.py  BibTeX.py  Gnome.py  GnomeUI.py  Makefile.am  Medline.py  Ovid.py  Refer.py  Resource.py
Pyblio/Format/: BibTeX.py  Makefile.am  Medline.py  Ovid.py  OvidLike.py  Refer.py  isifile.py  ut_Isi.py  ut_Ovidlike.py  ut_medline.py
Pyblio/GnomeUI/: Common.py  Compat.py  Config.py  Document.py  Editor.py  Entry.py  Fields.py  FieldsInfo.py  FileSelector.py  Format.py  Index.py  Makefile.am  Medline.py  Mime.py  OpenURL.py  Pybliographic.py  Search.py  Sort.py  Utils.py  __init__.py  ut_compat.py
Pyblio/Output/: LaTeX.py  Makefile.am  html.py  latexutils.py  raw.py  text.py  textau.py  textnum.py
Pyblio/Style/: Generic.py  Makefile.am  Parser.py  Utils.py  abbrv.py  apa4e.py
Styles/: Abbrev.xml  Alpha.xml  Makefile.am  abbrvau.xml  abbrvbib.xml  abbrvnum.xml  apa4e.xml  bibstyle.dtd
debian/: README.debian  changelog  control  copyright  menu  postinst  prerm  rules
doc/: Makefile.am
doc/C/: Makefile.am  authors.xml  commandline.xml  config.sgml  config.xml  database.sgml  database.xml  entry.sgml  entry.xml  gui.sgml  gui.xml  iterator.sgml  iterator.xml  key.sgml  key.xml  preface.xml  pyblio-C.omf  pyblio.sgml  pyblio.xml  pybliographer-C.omf  pybliographer.xml  script.sgml  script.xml  selection.sgml  selection.xml  sort.xml  start.xml  styles.sgml  styles.xml  template.sgml  tester.xml  url.sgml  url.xml
doc/it/: Makefile.am  config.sgml  database.sgml  entry.sgml  gui.sgml  iterator.sgml  key.sgml  pyblio.sgml  script.sgml  selection.sgml  sort.sgml  styles.sgml  tester.sgml  url.sgml
etc/: installer.in
glade/: Makefile.am  config1.glade  fields1.glade  format.glade  format.gladep  medline.glade  openurl.glade  openurl.gladep  pyblio.glade  search.glade  search.gladep  sort.glade
po/: ChangeLog  Makefile.am  POTFILES.in  POTFILES.skip  README.i18n  ar.po  az.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  fi.po  fr.po  hr.po  hu.po  it.po  ja.po  nb.po  ne.po  nl.po  no.po  oc.po  pa.po  pt.po  pt_BR.po  ru.po  rw.po  sk.po  sr.po  sr@Latn.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po
scripts/: Makefile.am  pybcheck.py  pybcompact.py  pybconvert.py  pybformat.py  pybliographic.py  pybscript.in  pybtex.py  pybtext.py
tests/: Makefile.am  bibtex.bib  bibtex.text  broken.bib  compact  compact.aux  compact.bib  convert  document.aux  document.bbl.ref  document.tex  format  format.html  format.latex  format.py  format.raw  format.text  format2  format2.html  format2.latex  format2.raw  format2.text  format2.textau  format2.textnum  import-export  import-export.py  medline.bib  medline.med  ovid.ovid  preamble.bib  pubmed.bib  pubmed.med  pybformat  pybtex  pybtext  pybtext.Alpha  pybtext.abbrvau  pybtext.abbrvbib  pybtext.abbrvnum  pybtext.bib  (+5 more)
