# This file is part of pybliographer
# 
# Copyright (C) 1998-2003 Frederic GOBRY
# Email : gobry@idiap.ch
# 	   
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2 
# of the License, or (at your option) any later version.
#   
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details. 
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
# 
# $Id: Makefile.am,v 1.3.2.2 2003/08/06 13:31:25 fredgo Exp $

pybdir = $(datadir)/$(PACKAGE)/Pyblio/Format

EXTRA_DIST = \
	__init__.py	\
	BibTeX.py	\
	isifile.py	\
	Ovid.py		\
	OvidLike.py	\
	Refer.py	\
	Medline.py


pyb_DATA = $(EXTRA_DIST)
