# This file is part of pybliographer
# 
# Copyright (C) 1998-2003 Frederic GOBRY
# Email : gobry@idiap.ch
# 	   
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2 
# of the License, or (at your option) any later version.
#   
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details. 
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
# 
# $Id: Makefile.am,v 1.6.2.2 2003/09/18 13:23:37 fredgo Exp $

pybdir = $(datadir)/$(PACKAGE)/Pyblio/GnomeUI

EXTRA_DIST = \
	Medline.py		\
	Config.py		\
	Format.py		\
	Document.py 		\
	Editor.py 		\
	Entry.py 		\
	Fields.py		\
	FieldsInfo.py 		\
	FileSelector.py 	\
	Index.py 		\
	Mime.py 		\
	Pybliographic.py 	\
	Search.py 		\
	Sort.py 		\
	Utils.py 		\
	__init__.py

pyb_DATA = $(EXTRA_DIST)
